--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,20 @@ body {
 #abt {
 	text-align: center;
 }
+#sta {
+	color: #ffffff;
+	margin-left: 100px;
+	text-align: left;
+}
+#fimage {
+	
+}
+#simage {
+	
+}
+#timage {
+	
+}
 
 
 img {
@@ -30,20 +44,20 @@ img {
 	left: 0;
 	border-radius: 10px;
 	width: 1371px;
-	height: 900px;
+	height: 410px;
     margin-left: 5px;
     margin-right: auto;
 }
 
 .interact {
-	background-color: rgb(248, 178, 74);
+	background-color: rgb(255, 255, 255);
 	align-items: center;
 	border-radius: 30px;
 	width: 800px;
 	height: 400px;
     position:absolute;
 	top: 300px;
-    right: 300px;
+    left: 300px;
 	display: flex;
 	flex-direction: column;
 
@@ -79,7 +93,6 @@ img {
     font-size: 16px;
 }
 .words {
-	background-color: #6494ce;
 	border-radius: 20px;
 	position: absolute;
 	top: 100px;
@@ -88,3 +101,20 @@ img {
 	text-align: justify;
 }
 
+
+.second {
+	background-color: rgb(74, 193, 248);
+	position: absolute;
+	top: 800px;
+	left: 0;
+	border-radius: 10px;
+	width: 1371px;
+	height: 600px;
+    margin-left: 5px;
+    margin-right: auto;
+}
+.fimage {
+	background-color: bisque;
+	position: absolute;
+	top: 900px;
+}
