--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,9 @@ body {
 	font-family: sans-serif, fantasy;
 	background-color: rgb(0, 0, 0);
 }
+a {
+	text-decoration: none;
+}
 #name {
 	text-align: center;
 }
@@ -123,4 +126,17 @@ img {
 	background-color: bisque;
 	position: absolute;
 	top: 900px;
+}
+
+.returnn {
+	background-color: rgb(26, 111, 168);
+	border-radius: 10px;
+	display: flex;
+	align-items: center;
+    justify-content: center;
+	position: absolute;
+	top: 500px;
+	left: 1200px;
+	height: 50px;
+	width: 150px;
 }
